--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>鏡中人格：探索你的另一面</title>
     <meta name="description" content="透過心理測驗,揭示你潛藏的鏡像人格。基於榮格Shadow Self理論設計。">
     <link rel="stylesheet" href="styles.css">
